--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "newrelic": "^12.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^9.0.4",
